@@ -5,7 +5,13 @@
 #endif
 #include <libHX/option.h>
 
-int main(void)
+static const struct HXoption t[] = {
+	HXOPT_AUTOHELP,
+	HXOPT_TABLEEND,
+};
+
+int main(int argc, const char **argv)
 {
+	HX_getopt(t, &argc, &argv, HXOPT_USAGEONERR);
 	return EXIT_SUCCESS;
 }
